  and a missing return for normal users.
- Fixed a win32 SSL installer problem
- Fixed problem with DEBUG ERROR when SSL handshaking (reported by some people)
- Fixed a bug where the win32 installer didn't install dbghelp.dll on systems that don't
  have any version of the dll.
- Removed GNU malloc totally from the FSU pthreads distribution
- Added some somewhat path specifics to unrealinstssl.iss
- Fixed some installer problems wrt SSL compile, and added makefile.win32.ssl
- Removed /doc/faq included in new doc set
- Added set::ssl::egd for Entropy Gathering Daemon support see doc/conf.doc or
  doc/example.conf for more information.
- Updated credits
- Removed ./Setup - No longer supported (read the docs!)
- Removed .NEW_CONFIG - No longer needed
- Removed INSTALL - Refer to NEW docs Unreal32docs.html
- Removed doc/commands.txt - Refer to NEW docs Unreal32docs.html
- Removed doc/faq - Refer to NEW docs Unreal32docs.html
- Removed doc/conf.doc - Refer to NEW Docs Unreal32docs.html
- Removed doc/unrealircd.doc - Refer to NEW docs Unreal32docs.html
- Removed doc/Elite.Changes - Out Dated
- Removed doc/services-install-guide - Refer to NEW docs Unreal32docs.html
- Modfied Unreal.nfo to include ref. to new docs
- Removed old docs and added new docs to Makefile.in
- Updated .CHANGES.NEW with new version # and link to docs
- Updated .RELEASE.NOTES with new version # and link to docs
- Added NEW doc/unreal32docs.html Docs
- Fixed an oper::swhois bug where the swhois was not propagated reported by FrostByghte
  (#0000247)
- Converted cr/lf to just lf in doc/unrea32docs.html
- Fixed a bug where set {} info wasn't cleared out at rehash
- Removed .NEW_CONFIG referenced from the win32 installer scripts
- Removed LEAST_IDLE, wtf did that do in the first place?
- Added version flags (O and o) for oper override and oper override verify
- FAKE_LAG_FOR_LOCOPS define added in config.h - enables local ops to
  override RFC1459 flood control